Fix for responsive "locations" top margin being too high

--- a/css/default.scss
+++ b/css/default.scss
@@ -307,6 +307,9 @@ text-transform: uppercase;
     position: relative !important;
     width: auto !important;
   }
+  .location{
+    margin-top: 0;
+  }
   .oSoc-logo{
     display: inline-block;
     width: 100% !important;
